[DataTable] Fix border overflow when sticky

--- a/@navikt/core/css/src/data-table.css
+++ b/@navikt/core/css/src/data-table.css
@@ -67,6 +67,15 @@
     position: sticky;
     top: 0;
     z-index: 3;
+
+    &::after {
+      content: "";
+      position: absolute;
+      inset-inline: 0;
+      bottom: -1px;
+      pointer-events: none;
+      border-bottom: 1px solid var(--ax-border-neutral-subtle);
+    }
   }
 }
 
@@ -84,6 +93,7 @@
     pointer-events: none;
     border: 1px solid var(--ax-border-neutral-subtle);
     border-radius: var(--ax-radius-12);
+    z-index: 3;
   }
 }
 
@@ -148,7 +158,7 @@
       right: 0;
     }
 
-    background-color: var(--ax-bg-default);
+    background-color: var(--ax-bg-raised);
 
     .aksel-data-table__thead & {
       background-color: var(--ax-bg-neutral-soft);
@@ -211,7 +221,6 @@
   display: flex;
   align-items: center;
   gap: var(--ax-space-2);
-  padding-inline-start: var(--ax-space-16);
   block-size: calc(var(--__axc-data-table-density) + 1.5rem);
   width: 100%;
   cursor: pointer;
